ログイン画面の前にスプラッシュ画面のViewが乗っかってしまい、ログインボタンが押せないバグを修正

--- a/RootViewControllerSample/RootViewControllerSample/Storyboards/Login.storyboard
+++ b/RootViewControllerSample/RootViewControllerSample/Storyboards/Login.storyboard
@@ -27,6 +27,9 @@
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Login"/>
+                                <connections>
+                                    <action selector="login:" destination="oRK-77-0on" eventType="touchUpInside" id="o4X-Sg-g65"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
