--- a/AutoLayoutSample/AutoLayoutSample/Base.lproj/Main.storyboard
+++ b/AutoLayoutSample/AutoLayoutSample/Base.lproj/Main.storyboard
@@ -70,13 +70,15 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="44"/>
                                 <color key="backgroundColor" red="0.96078431369999995" green="0.3294117647" blue="0.1764705882" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="44" id="Add-zm-wJ0"/>
                                     <constraint firstAttribute="height" constant="44" id="MKu-NM-lyD"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                 <state key="normal" title="Next Sample">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <segue destination="56d-IY-qMR" kind="show" id="Xpw-Xk-7Z4"/>
+                                </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Jyb-lE-Cq9">
                                 <rect key="frame" x="0.0" y="132" width="414" height="730"/>
@@ -102,6 +104,50 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jnX-Y3-b66" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1889.8550724637682" y="136.60714285714286"/>
+        </scene>
+        <!--Third View Controller-->
+        <scene sceneID="Q6e-Bc-1x4">
+            <objects>
+                <viewController id="56d-IY-qMR" customClass="ThirdViewController" customModule="AutoLayoutSample" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3Yp-l3-vEM">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zEx-QJ-5NF">
+                                <rect key="frame" x="0.0" y="88" width="414" height="44"/>
+                                <color key="backgroundColor" red="0.96078431369999995" green="0.3294117647" blue="0.1764705882" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="xPB-wb-h1q"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <state key="normal" title="Next Sample">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qbn-ON-3bL">
+                                <rect key="frame" x="0.0" y="132" width="414" height="730"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="qbn-ON-3bL" firstAttribute="top" secondItem="zEx-QJ-5NF" secondAttribute="bottom" id="4Th-za-pjq"/>
+                            <constraint firstItem="zEx-QJ-5NF" firstAttribute="trailing" secondItem="wxX-AN-oJy" secondAttribute="trailing" id="E5c-GJ-cIx"/>
+                            <constraint firstItem="zEx-QJ-5NF" firstAttribute="top" secondItem="wxX-AN-oJy" secondAttribute="top" id="EAc-qO-903"/>
+                            <constraint firstItem="zEx-QJ-5NF" firstAttribute="leading" secondItem="wxX-AN-oJy" secondAttribute="leading" id="G7a-Yi-CdY"/>
+                            <constraint firstItem="qbn-ON-3bL" firstAttribute="bottom" secondItem="wxX-AN-oJy" secondAttribute="bottom" id="Wsf-yu-HoR"/>
+                            <constraint firstItem="qbn-ON-3bL" firstAttribute="leading" secondItem="wxX-AN-oJy" secondAttribute="leading" id="bxz-7s-qxq"/>
+                            <constraint firstItem="qbn-ON-3bL" firstAttribute="trailing" secondItem="wxX-AN-oJy" secondAttribute="trailing" id="wPr-OC-5Q3"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="wxX-AN-oJy"/>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="qbn-ON-3bL" id="ivA-bR-86Y"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Wtb-d7-XIc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2663.768115942029" y="134.59821428571428"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="pO9-d3-CkF">
