UIStackViewを利用したアニメーションのサンプルを追加

--- a/AutoLayoutSample/AutoLayoutSample/View/Parts/ThirdCustomTableViewCell/ThirdCustomTableViewCell.xib
+++ b/AutoLayoutSample/AutoLayoutSample/View/Parts/ThirdCustomTableViewCell/ThirdCustomTableViewCell.xib
@@ -22,13 +22,13 @@
                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="URv-0E-g3e">
                         <rect key="frame" x="8" y="11.5" width="170.5" height="20.5"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" text="abcdefg" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cpo-R3-Y0R">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" text="abcdefg" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cpo-R3-Y0R">
                                 <rect key="frame" x="0.0" y="0.0" width="63" height="20.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="10" id="AgV-4c-Ahm"/>
                                     <constraint firstAttribute="width" relation="lessThanOrEqual" constant="100" id="efA-je-qzr"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
